syntax = "proto3";

package venomous_dashboard.auth;


// ====================================================================================================
// Base User Types
// ====================================================================================================

message Role {
  string id = 1;
  string name = 2;
  optional string description = 3;
  string created_at = 4;
  string updated_at = 5;
  optional string deleted_at = 6;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role_id = 4;
  optional string avatar_path = 5;
  string created_at = 6;
  string updated_at = 7;
  optional string deleted_at = 8;
}

message AuthUser {
  string id = 1;
  string user_id = 2;
  string email = 3;
  string password_hash = 4;
  bool email_verified = 5;
  optional string last_login = 6;
  int32 login_failure_count = 7;
  bool is_login_locked = 8;
  optional string deleted_at = 9;
}

// ====================================================================================================
// Token Types
// ====================================================================================================


message AuthToken {
  string token = 1;
  string expires_at = 2;
  string issued_at = 3;
}

message AuthTokenInfo {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string name = 4;
  string role = 5;
  int64 expires_at = 6;
  int64 issued_at = 7;
}